# hdlg

./: .gitignore  CHANGELOG.md  README.md  banner.psd  pyinstaller.py  pyproject.toml  setup.iss  social-preview.psd
.github/workflows/: build.yml  cd.yml  ci.yml  release.yml
hdlg/: config.py  hdd.py  hdlg.py  utils.py
hdlg/ui/: __init__.py  app.qss  main.py  main.ui  worker.py
