[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hdlg"
version = "0.1.0"
description = "Modern GUI for hdl-dump."
license = "GPL-3.0-or-later"
authors = ["PHOENiX <rlaphoenix@pm.me>"]
readme = "README.md"
repository = "https://github.com/rlaphoenix/hdlg"
keywords = ["ps2", "hdl-dump", "ps2-hdd", "ps2-game-installer"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Games/Entertainment",
]

[tool.poetry.dependencies]
python = ">=3.6,<3.11"
PySide2 = "^5.15.2.1"
appdirs = "^1.4.4"
toml = "^0.10.2"
pywin32 = "304"
WMI = "^1.5.1"

[tool.poetry.dev-dependencies]
pyinstaller = "^4.5.1"

[tool.poetry.scripts]
hdlg = "hdlg.hdlg:main"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/rlaphoenix/hdlg/issues"
